app/pages/index/index.css
.content {
    display: flex;
    flex-direction: row;

    flex: 0 1 50%;

    padding: 50px 50px 0 50px;

    max-width: 75em;
    margin-left: auto;
    margin-right: auto;
}

.column {
    flex-direction: column;
}

.terminalContainer {
    overflow-y: hidden !important;
}

#sanic-features-interactive {
    width: 100%;
}

/*TODO: HACK*/
.react-swipeable-view-container > div {
    overflow: hidden !important;
}

